[package]
name = "metaphy_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.53.2", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.30"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }