[package]
name = "metaphy_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
data = ["libp2p/rendezvous", "libp2p/kad"]
hub = ["libp2p/rendezvous"]
relay = ["libp2p/relay", "libp2p/rendezvous"]
user = ["libp2p/dcutr", "libp2p/mdns", "libp2p/relay", "libp2p/rendezvous", "libp2p/kad"]

[dependencies]
libp2p = { version = "0.53.2", features = ["macros", "tokio", "tcp", "quic", "noise", "yamux", "identify", "ping"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
