[package]
name = "hub"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metaphy_network = { path = "../../", features = ["hub"] }
tokio = { version = "*", features = ["full"] }
futures = "0.3.30"
log = "0.4.21"
env_logger = "0.11.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }